studentwise transport structure

--- a/app/elements/navigation-bar/navigation-bar.html
+++ b/app/elements/navigation-bar/navigation-bar.html
@@ -968,6 +968,7 @@
       },
       FnTransportfeeschedule:function(e){
         document.querySelector('transportfee-schedule-card').FnRefresh();
+        document.querySelector('transportfee-schedule-card').callService();
         this.$.scheduleservice.fetchacademicyearService();
         this.$.transportfeeservice.fetchzoneService();
       },
